name:                use-haskell-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/esjmb/use-haskell-api#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Barrett
maintainer:          Stephen.Barrett@tcd.ie
copyright:           2016
category:            test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , UseHaskellAPI
                     , UseHaskellAPIClient
                     , UseHaskellAPIServer
  build-depends:       base >= 4.7 && < 5
                    , aeson
                    , servant
                    , servant-server
                    , servant-client
                    , transformers
                    , wai
                    , warp
                    , wai-logger
                    , mongoDB
                    , hslogger
                    , time
                    , bson-generic
                    , resourcet
                    , text
                    , bytestring
                    , bson
                    , mtl
                    , http-client
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/esjmb/use-haskell-api
